--- a/.github/workflows/docker-bot.yml
+++ b/.github/workflows/docker-bot.yml
@@ -37,14 +37,14 @@ jobs:
                     context: ./src
                     file: ./src/Dockerfile
                     push: true
-                    tags: qwizii/cs2-battle-bot:${{ steps.extract_metadata.outputs.version }}, qwizii/cs2-battle-bot:latest
+                    tags: qwizii/cs2-battle-src:${{ steps.extract_metadata.outputs.version }}, qwizii/cs2-battle-src:latest
                     labels: ${{ steps.extract_metadata.outputs.labels }}
             -   name: Discord notification
                 env:
                     DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
                 uses: Ilshidur/action-discord@master
                 with:
-                    args: '${{ github.repository }} successfully built and pushed Docker images qwizii/cs2-battle-bot:${{ steps.extract_metadata.outputs.version }} and qwizii/cs2-battle-bot:latest.'
+                    args: '${{ github.repository }} successfully built and pushed Docker images qwizii/cs2-battle-src:${{ steps.extract_metadata.outputs.version }} and qwizii/cs2-battle-src:latest.'
             -   name: Release New Version
                 uses: softprops/action-gh-release@v1
                 with:
